fixed barcode arrow collapse

--- a/blocks/barcode/__image/barcode__image.css
+++ b/blocks/barcode/__image/barcode__image.css
@@ -1,4 +1,5 @@
 .barcode__image {
+  margin: 0 0 100px;
   max-width: 500px;
   width: 50%;
 }
