--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,5 +1,5 @@
 .intro__text {
-  width: 70%;
+  width: 60%;
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 38px;
   line-height: 1.6;
