--- a/blocks/journal/__text/journal__text.css
+++ b/blocks/journal/__text/journal__text.css
@@ -1,5 +1,5 @@
 .journal__text {
-  margin: 0;
+  margin: 0 0 20px;
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-size: 24px;
   line-height: 1.5;
