--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,3 +1,4 @@
 .page {
   margin: 0 auto;
+  text-rendering: optimizeLegibility;
 }
